<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
      android:id="@+id/ignitedhttp_status"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:textColor="#0F0"
      android:text="@string/ignitedhttp_nodata" />

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" >

        <Button
          android:id="@+id/ignitedhttp_btn_send_request"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:onClick="onDownloadButtonClicked"
          android:text="@string/ignitedhttp_btn_request" />

        <CheckBox
          android:id="@+id/ignitedhttp_chk_use_cache"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:checked="true"
          android:text="@string/ignitedhttp_chk_use_cache" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignitedhttp_memory_cache"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/ignitedhttp_text_cache_memory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ignitedhttp_empty"
        android:minLines="3"
        android:gravity="top"
        android:inputType="textMultiLine" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignitedhttp_disk_cache"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ignitedhttp_text_cache_disk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ignitedhttp_empty"
        android:minLines="3"
        android:gravity="top"
        android:inputType="textMultiLine" />

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" >

        <Button
          android:id="@+id/ignitedhttp_btn_clear_all"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/ignitedhttp_btn_clear_all"
          android:onClick="onClearAll" />

        <Button
          android:id="@+id/ignitedhttp_btn_clear_mem"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/ignitedhttp_btn_clear_mem"
          android:onClick="onClearMemory" />

    </LinearLayout>

</LinearLayout>